fixing some syntax errors

--- a/_posts/2023-08-02-contact.md
+++ b/_posts/2023-08-02-contact.md
@@ -5,7 +5,7 @@ title: Contact
 
 I am looking for DPhil students to work with me. If you are interested in working with me, I can be found in:
 <dl>
-  <dd><a href="https://www.abdn.ac.uk/ncs/">Department of Computer Science</a>, Meston Building,</dd>
+  <dd><a href="https://www.abdn.ac.uk/ncs/departments/computing-science/index.php">Department of Computer Science</a>, Meston Building,</dd>
   <dd>Old Aberdeen Campus</dd>
   <dd>Meston Walk</dd>
   <dd>AB24 3UE</dd>
