--- a/_posts/2023-08-03-overview.md
+++ b/_posts/2023-08-03-overview.md
@@ -10,6 +10,7 @@ Prior to joining University of Aberdeen, I had been a research fellow in various
 * I worked with [Prof. Ian Craddock](https://www.bristol.ac.uk/engineering/research/digital-health/research/sphere/people/) and [Dr. Ryan McConville](https://ryanmcconville.com/) at University of Bristol developing machine learning models to identify potential digital biomarkers on a person living with Parkinson's disease with IoT and wearable devices. 
 * I worked with [Prof. Sara Bernardini](https://www.sara-bernardini.com/) at Royal Holloway University of London to develop a multi-agent planning system for inspection, maintenance, or exploration in an extreme environment using various autonomous robots.
 * I worked with [Prof. David Howey](https://eng.ox.ac.uk/people/david-howey/) at University of Oxford to develop probabilistic models for predicting battery health and its remaining useful life on real-world data.
+* I received my PhD (2019) from the [University of Birmingham](https://www.birmingham.ac.uk/schools/computer-science/index.aspx), with [Prof. Jeremy Wyatt](https://www.cs.bham.ac.uk/~jlw) and [Prof. Nick Hawes](https://www.robots.ox.ac.uk/~nickh/), working on statistical machine learning for robot explorations as part of the [STRANDS project](http://strands.acin.tuwien.ac.at/).
 
 My expertise is in mobile robotics, multimodal learning, data stream and time series analysis. I have applied my expertise to scientific and engineering problems in various fields ranging from service robotics, energy, healthcare, and robots in extreme environments. I am also interested in how new technologies, with machine learning engine, provide real-time efficient services while having to function in highly dynamic and resource-constrained environments.
 
@@ -22,7 +23,7 @@ My expertise is in mobile robotics, multimodal learning, data stream and time se
 * <strong>[04/2023]</strong> - One paper on Multimodal Transformer for Timeseries was accepted at KDD 2023.
 * <strong>[02/2023]</strong> - I was co-organising AAAI/ACM SIGAI [Job Fair](https://aaai-23.aaai.org/ai-job-fair/) at [AAAI-23](https://aaai-23.aaai.org/).
 * <strong>[02/2023]</strong> - One paper was presented at IAAI 2023. ([paper](https://doi.org/10.1609/aaai.v37i13.26874))
-* <strong>[10/2022]</strong> - One paper on Partially Observable Poisson Processes was published in Autonomous Robots 2023. ([paper](https://proceedings.mlr.press/v84/jovan18a.html))
+* <strong>[10/2022]</strong> - One paper on Partially Observable Poisson Processes was published in Autonomous Robots 2023. ([paper](https://doi.org/10.1007/s10514-022-10070-9))
 * <strong>[10/2022]</strong> - One paper on Adaptive Temporal Planning for MIMRee was accepted at IAAI 23.
-* <strong>[09/2022]</strong> - One paper on Multirobot System for O\&M of Windfarms was published in the Journal of Field Robotics 2023. ([paper](https://researchonline.rca.ac.uk/id/eprint/4397))
+* <strong>[09/2022]</strong> - One paper on Multirobot System for O\&M of Windfarms was published in the Journal of Field Robotics 2023. ([paper](https://doi.org/10.1002/rob.22117))
 * <strong>[06/2022]</strong> - I was invited as a guest lecturer at Universitas Diponegoro.
